<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activityMain" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/balanceString"
            android:id="@+id/balanceText"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            android:textSize="26sp"
            android:gravity="start|center_vertical"
            app:layout_constraintLeft_toLeftOf="parent" />

        <!--TODO Create a graph here showing the current balance of the different spending areas-->

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineV1"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.333" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineV2"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.667" />

        <Button
            android:text="@string/addButton"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guidelineV2"
            app:layout_constraintTop_toBottomOf="@+id/balanceText"
            android:background="@color/softRed"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/fontGrey"
            android:gravity="top|center_horizontal"
            android:paddingTop="20dp"
            android:onClick="addTransaction"
            android:id="@+id/addButton"/>

        <Button
            android:text="@string/config"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/balanceText"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/softGreen"
            android:gravity="top|center_horizontal"
            android:paddingTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/fontGrey"
            android:id="@+id/configButton"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineV2" />

        <Button
            android:text="@string/history"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/configButton"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/fontGrey"
            android:background="@color/softYellow"
            android:gravity="top|center_horizontal"
            android:paddingTop="20dp"
            android:id="@+id/historyButton"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineV2" />

        <Button
            android:text="@string/report"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addButton"
            app:layout_constraintRight_toLeftOf="@+id/guidelineV1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/fontGrey"
            android:background="@color/softOrange"
            android:gravity="top|center_horizontal"
            android:paddingTop="20dp"
            android:id="@+id/miscButton1"/>

        <Button
            android:text="@string/spare2"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="4dp"
            app:layout_constraintRight_toLeftOf="@+id/guidelineV2"
            app:layout_constraintTop_toBottomOf="@+id/addButton"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/fontGrey"
            android:background="@color/softPurple"
            android:gravity="top|center_horizontal"
            android:paddingTop="20dp"
            android:id="@+id/miscButton2"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineV1" />

        <Button
            android:text="@string/stats"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/historyButton"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/fontGrey"
            android:background="@color/softBlue"
            android:gravity="top|center_horizontal"
            android:paddingTop="20dp"
            android:id="@+id/statButton"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineV1" />

        <Button
            android:text="@string/spare3"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/miscButton1"
            app:layout_constraintRight_toLeftOf="@+id/guidelineV1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/fontGrey"
            android:background="@color/softPink"
            android:gravity="top|center_horizontal"
            android:paddingTop="20dp"
            android:id="@+id/miscButton3"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>
